--- a/styles/style.css
+++ b/styles/style.css
@@ -680,7 +680,6 @@ html {
   left: 0;
   right: 0;
   background: rgba(0, 0, 255, 0.5);
-  z-index: 0;
 }
 
 @media (max-width: 1400px) {
@@ -778,16 +777,22 @@ html {
 }
 
 @media (max-width: 840px) {
-  .outer-box {
-    opacity: .2;
+  .instructions-box {
+    visibility: hidden;
   }
   .inner-box {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     visibility: visible;
-    width: 80vw;
+    background: rgba(255, 255, 255, 0.3);
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 30vh 50px;
     color: black;
     font-size: 2rem;
-    position: fixed;
-    top: 200px;
-    left: 10%;
   }
 }
